# SPE-homework

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
01/: exercise-01.py  main-es2.py  main.py
01/report/: report.tex
02/: exercise-01.py  exercise-02.py
02/report/: report.tex
03/: exercise-01.py
03/report/: report.tex
04/: exercise-01.py  exercise-02.py  queue_mm1.py
04/report/: report.tex
assignments/01/: exercise-02.py
assignments/02/: exercise-01.py
assignments/03/report/: report.tex
assignments/04/report/: report.tex
data-analysers/: board_time.py  delay.py  lorenz-curve.py  people-served.py  people.py  run-all.sh
datasets/: London.json  README.md  Wien.json
src/: main.rs
src/dataset/: mod.rs
src/graph/: edge.rs  mod.rs  node.rs
src/logger/: mod.rs
src/simulation/: event.rs  mod.rs  simulate.rs  train_system.rs
src/simulation/info/: mod.rs
src/train_lines/: graph_elements.rs  line.rs  line_stop.rs  mod.rs  person.rs  train.rs  train_line.rs
src/utils/: config.rs  time.rs
