[package]
name = "project"
version = "0.1.1"
edition = "2024"

[dependencies]
itertools = "0.14.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand_distr = "0.5.1"

[dependencies.petgraph]
version = "0.8.2"
default-features = false
features = ["std", "graphmap"]